# Proj_00000_CSWC

./: .gitignore
01-Tools/: BuildFolder.cmake  CMakeLists.txt  CompilerSettings.cmake  CompilerStatus.cmake  DefaultConfig.cmake  Default_Config.cmake  DirectorySettings.cmake  FileScan.cmake  FilesStatus.cmake  GetExtensions.cmake  GetFunctions.cmake  StatusGenerator.cmake  TargetSettings.cmake
02-Source/01-Dep/: Config.cmake
02-Source/02-Stub/: main.c  main.cpp
02-Source/03-Cfg/: CSWC_cfg.c  CSWC_cfg.hpp  LFIC_CSWC_cfg.hpp  SFIC_CSWC_cfg.h
02-Source/04-Src/: CSWC_int.h  CSWC_int.hpp  CSWC_prg.c  CSWC_priv.h  CSWC_priv.hpp
03-Tools/: BuildFolder.cmake  CMakeLists.txt  CompilerSettings.cmake  CompilerStatus.cmake  DebuggerSettings.cmake  DefaultConfig.cmake  FilesStatus.cmake  FindFiles.cmake  TargetSettings.cmake
04-Source/03-Cfg/: CSWC_cfg.cpp  HFIC_CSWC_cfg.hpp  MFIC_CSWC_cfg.hpp
04-Source/04-Src/: CSWC_prg.cpp
05-Build/: Directories.txt  Headers.txt  SourceFiles.txt  build_db.txt
05-Source/01-Make/: Config.cmake  i386pep.x  linker_script.ld
05-Source/02-Stub/: BSW_cfg.h  HashTable.cpp  algorithms.cpp  main.cpp  queue.cpp  stack.cpp  tree.cpp
06-Tests/02-Integration/: requirements.txt  setup.bat
06-Tests/02-Integration/Results/: log.html  output.xml  report.html
06-Tests/02-Integration/Suites/: Suite.robot
06-Tests/02-Integration/Tests/: RunTests.bat  SWC.robot
06-Tests/02-Integration/Tests/cfg/: cfg.robot
06-Tests/02-Integration/Tests/examples/: SS.robot  chrome.robot
09-Build/: Directories.txt  Headers.txt  SWC.map  SourceFiles.txt  build_db.txt
